# Bill

./: .replit  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  run_fastapi.py  start_dev.sh
backend/: __init__.py  database.py  main.py  models.py  schemas.py  seed_data.py
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: BillForm.tsx  BillPrint.tsx  Navigation.tsx  RateCardHeader.tsx  RateCardNotes.tsx  RateCardTable.tsx
client/src/components/examples/: RateCard.tsx  RateCardHeader.tsx  RateCardNotes.tsx  RateCardTable.tsx
client/src/lib/: numberToWords.ts
client/src/pages/: Bills.tsx  LeisureItems.tsx  RateCard.tsx  RateCard.tsx.backup  RateCardAdmin.tsx
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
